# AIGomokuGame

./: CMakeLists.txt  README.md
src/: ai_strategy.h  astar_ai.cpp  astar_ai.h  board.cpp  board.h  game_types.h  gamedialog.cpp  gamedialog.h  gamesave.cpp  gamesave.h  main.cpp  mainwindow.cpp  mainwindow.h  rule_based_ai.cpp  rule_based_ai.h
